Use Files.writeString